Loader to login/register page keeps show

--- a/colaraz/lms/static/sass/discussion/_layouts.scss
+++ b/colaraz/lms/static/sass/discussion/_layouts.scss
@@ -598,3 +598,11 @@ body {
         }
     }
 }
+
+.register-login-page {
+
+    #preload {
+        display: block !important;
+        opacity: 1 !important;
+    }
+}
