--- a/colaraz/lms/templates/student_account/login_and_register.html
+++ b/colaraz/lms/templates/student_account/login_and_register.html
@@ -36,6 +36,8 @@
         </script>
     % endfor
 </%block>
+
+<%block name='bodyclass'> register-login-page </%block>
 <div class="section-bkg-wrapper">
     <main id="main" aria-label="Content" tabindex="-1">
         <div id="content-container" class="login-register-content">
