Payment success page design fixes

--- a/colaraz/ecommerce/colaraz-ecommerce/static/sass/base/_base.scss
+++ b/colaraz/ecommerce/colaraz-ecommerce/static/sass/base/_base.scss
@@ -24,6 +24,14 @@ a,
     }
 }
 
+input,
+button {
+
+    &:focus {
+        outline-color: $primary;
+    }
+}
+
 .wrapper {
     min-height: 100%;
     position: relative;
