--- a/colaraz/ecommerce/colaraz-ecommerce/static/sass/partials/views/_basket.scss
+++ b/colaraz/ecommerce/colaraz-ecommerce/static/sass/partials/views/_basket.scss
@@ -427,6 +427,11 @@
                         border: 1px solid $gray-color;
                         border-radius: 0;
                         color: $gray-color;
+                        box-shadow: none;
+
+                        &:focus {
+                            border-color: $primary;
+                        }
                     }
 
                     div:not(.payment-button) {
@@ -709,4 +714,16 @@
             }
         }
     }
+}
+
+.sr,
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
