[COL-221] API links for header

--- a/colaraz/lms/static/sass/shared-v2/_header.scss
+++ b/colaraz/lms/static/sass/shared-v2/_header.scss
@@ -781,6 +781,10 @@
                 background: url('../images/projects.png');
             }
 
+            .finance-link {
+                background: url('../images/finance.png');
+            }
+
             .development-link {
                 background: url('../images/development.png');
             }
