--- a/colaraz/lms/templates/header/header.html
+++ b/colaraz/lms/templates/header/header.html
@@ -81,17 +81,19 @@ from openedx.features.colaraz_features.models import ColarazUserProfile
             protocol = getattr(settings, 'COLARAZ_DOMAIN_PROTOCOL', 'http')
             identifier = user.colaraz_profile.site_identifier 
             domain = settings.COLARAZ_SUB_DOMAIN
+            base_url = '{}://{}.{}/'.format(protocol, identifier, domain)
             user_urls = user.colaraz_profile.role_based_urls
 
-            colaraz_ecosystem_url = '{}://{}.{}/cvsocial/activity?{}'.format(protocol, identifier, domain, user_urls.get('ecosystem')) if user_urls.has_key('ecosystem') else '#'
-            colaraz_recruiting_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('recruiting')) if user_urls.has_key('recruiting') else '#'
-            colaraz_management_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('management')) if user_urls.has_key('management') else '#'
-            colaraz_performance_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('performance')) if user_urls.has_key('performance') else '#'
-            colaraz_development_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('development')) if user_urls.has_key('development') else '#'
-            colaraz_settings_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('settings')) if user_urls.has_key('settings') else '#'
-            colaraz_recommendations_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('recommendations')) if user_urls.has_key('recommendations') else '#'
-            colaraz_mentoring_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('mentoring')) if user_urls.has_key('mentoring') else '#'
-            colaraz_scholarship_url = '{}://{}.{}/{}'.format(protocol, identifier, domain, user_urls.get('scholarship')) if user_urls.has_key('scholarship') else '#'
+            colaraz_ecosystem_url = '{}cvsocial/activity?{}'.format(base_url, user_urls.get('ecosystem')) if 'ecosystem' in user_urls else '#'
+            colaraz_recruiting_url = '{}{}'.format(base_url, user_urls.get('recruiting')) if 'recruiting' in user_urls else '#'
+            colaraz_management_url = '{}{}'.format(base_url, user_urls.get('management')) if 'management' in user_urls else '#'
+            colaraz_performance_url = '{}{}'.format(base_url, user_urls.get('performance')) if 'performance' in user_urls else '#'
+            colaraz_development_url = '{}{}'.format(base_url, user_urls.get('development')) if 'development' in user_urls else '#'
+            colaraz_settings_url = '{}{}'.format(base_url, user_urls.get('settings')) if 'settings' in user_urls else '#'
+            colaraz_recommendations_url = '{}{}'.format(base_url, user_urls.get('recommendations')) if 'recommendations' in user_urls else '#'
+            colaraz_mentoring_url = '{}{}'.format(base_url, user_urls.get('mentoring')) if 'mentoring' in user_urls else '#'
+            colaraz_scholarship_url = '{}{}'.format(base_url, user_urls.get('scholarship')) if 'scholarship' in user_urls else '#'
+            colaraz_finance_url = '{}{}'.format(base_url, user_urls.get('finance')) if 'finance' in user_urls else '#'
         %>
     <div class="header-navigations">
         <nav class="primary-navigation">
@@ -114,6 +116,7 @@ from openedx.features.colaraz_features.models import ColarazUserProfile
                     <li><a href="${colaraz_performance_url}"><span class="talent-link"></span>Performance</a></li>
                     % endif
                     <li class="active"><a href="${colaraz_development_url}"><span class="development-link"></span>Development</a></li>
+                    <li><a href="${colaraz_finance_url}"><span class="finance-link"></span>Finance</a></li>
                 </ul>
             </div>
         </nav>
