added a flag to hide user navigation bar in xblock

--- a/colaraz/lms/templates/main.html
+++ b/colaraz/lms/templates/main.html
@@ -350,7 +350,7 @@
             </ul>
         </div>
 
-        % if user.is_authenticated:
+        % if user.is_authenticated and not mobile_view:
         <div class="side-container">
           %if display_sidebar_account_activation_message:
             <div class="sidebar-notification">
