--- a/colaraz/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/colaraz/lms/static/sass/course/layout/_courseware_preview.scss
@@ -31,6 +31,19 @@
 
         &.exam-attempts-table {
             table-layout: auto;
+            font-size: 13px;
+
+            td {
+                padding: 5px;
+                font-size: 13px !important;
+                line-height: 1.4 !important;
+            }
+
+            th {
+                font-size: 13px !important;
+                line-height: 1.4 !important;
+                padding: 5px;
+            }
         }
     }
 
