Removed title Edly

--- a/colaraz/lms/templates/instructor/instructor_dashboard_2/membership.html
+++ b/colaraz/lms/templates/instructor/instructor_dashboard_2/membership.html
@@ -78,9 +78,9 @@ from openedx.core.djangolib.markup import HTML, Text
         <p class="">
             <span class="icon fa fa-info-circle" aria-hidden="true"></span>
             ${Text(
-                _("Here is a sample bulk enrollments CSV file: {link_start}Edly Learners Bulk Enrollment (CSV).csv{link_end}.")
+                _("Here is a sample bulk enrollments CSV file: {link_start}Learners Bulk Enrollment (CSV).csv{link_end}.")
             ).format(
-                link_start=HTML('<a href="https://edly-cloud-static-assets.s3.amazonaws.com/Edly+Learners+Bulk+Enrollment+(CSV).csv" class="btn-link link-cross-reference" target="_blank">'),
+                link_start=HTML('<a href="https://colaraz-static-assets-storage.s3.amazonaws.com/Learners%2BBulk%2BEnrollment%2B(CSV).csv" class="btn-link link-cross-reference" target="_blank">'),
                 link_end=HTML('</a>')
             )}
         </p>
