--- a/colaraz/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/colaraz/lms/static/sass/course/layout/_courseware_preview.scss
@@ -48,14 +48,16 @@
     }
 
     .proctored_exam_status {
+        margin: $baseline*.5;
+        width: auto;
 
         .exam-timer {
             color: $black;
         }
 
         &.is-fixed {
-            left: 20px;
-            width: calc(100% - 40px);
+            position: static;
+            width: auto;
         }
     }
 
