--- a/colaraz/lms/templates/ace_common/edx_ace/common/base_body.html
+++ b/colaraz/lms/templates/ace_common/edx_ace/common/base_body.html
@@ -27,7 +27,7 @@
 {% google_analytics_tracking_pixel %}
 
 <div lang="{{ LANGUAGE_CODE|default:"en" }}" dir="{{ LANGUAGE_BIDI|yesno:"rtl,ltr" }}" style="
-    background-color: #f5f5f5;
+    background-color: #303030;
     margin: 0;
     min-width: 100%;
     padding-bottom: 30px;
@@ -167,8 +167,8 @@
                         <td>
                             {% for action_link_url, action_link_text in channel.action_links %}
                                 <p style="padding-bottom: 20px;">
-                                    <a href="{{ action_link_url }}" style="color: #960909">
-                                        <font color="#960909"><b>{{ action_link_text }}</b></font>
+                                    <a href="{{ action_link_url }}" style="color: #fff">
+                                        <font color="#fff"><b>{{ action_link_text }}</b></font>
                                     </a>
                                 </p>
                             {% endfor %}
@@ -176,7 +176,7 @@
                     </tr>
                     <tr>
                         <!-- COPYRIGHT -->
-                        <td style="color: #666666; font-size: 13px; line-height: 26px;">
+                        <td style="color: #fff; font-size: 13px; line-height: 26px;">
                             &copy; {{ platform_name }} {% now "Y" %}. {% trans "All rights reserved" %}.
                         </td>
                     </tr>
