--- a/colaraz/lms/templates/main.html
+++ b/colaraz/lms/templates/main.html
@@ -470,6 +470,14 @@
         var isColarazJobAlertsApiEnabled = ${getattr(settings, 'COLARAZ_JOB_ALERTS', {}).get('ENABLE', False) | n, dump_js_escaped_json};
         var colarazJobAlertsRefreshTime = ${getattr(settings, 'COLARAZ_JOB_ALERTS', {}).get('REFRESH_TIME_MILLISECONDS', 30000)};
 
+        // Colaraz check session variables
+        var isColarazCheckSessionEnabled = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('ENABLE', False) | n, dump_js_escaped_json};
+        var colarazIdpUrl = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('COLARAZ_IDP_URL')};
+        var colarazCheckSessionUrl = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('CHECK_SESSION_URL')};
+        var colarazCheckSessionRefreshTime = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('REFRESH_TIME_MILLISECONDS', 60000)};
+        var colarazCheckSessionKey = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('COLARAZ_CHECK_SESSION_KEY')};
+        var edXLogoutUrl = "${reverse('logout')}";
+
         // Colaraz Discussion Forum API variables
         % if user.is_authenticated and hasattr(course, 'id'):
         var colarazDiscussionAllThreadsUrl = "${reverse('thread-list')}?${urllib.urlencode({'course_id': course.id})}";
