--- a/colaraz/cms/templates/base.html
+++ b/colaraz/cms/templates/base.html
@@ -269,7 +269,9 @@ from openedx.core.release import RELEASE_LINE
         var colarazCheckSessionRefreshTime = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('REFRESH_TIME_MILLISECONDS', 60000)};
         var colarazCheckSessionKey = "${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('COLARAZ_CHECK_SESSION_KEY')}";
         var edXLogoutUrl = "${reverse('logout')}";
-        var currentUserEmail = "${user.email}";
+        % if user.is_authenticated:
+            var currentUserEmail = "${user.email}";
+        % endif
 
       </script>
     <%include file="widgets/segment-io-footer.html" />
