--- a/colaraz/lms/templates/main.html
+++ b/colaraz/lms/templates/main.html
@@ -477,7 +477,9 @@
         var colarazCheckSessionRefreshTime = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('REFRESH_TIME_MILLISECONDS', 60000)};
         var colarazCheckSessionKey = "${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('COLARAZ_CHECK_SESSION_KEY')}";
         var edXLogoutUrl = "${reverse('logout')}";
-        var currentUserEmail = "${user.email}";
+        % if user.is_authenticated:
+            var currentUserEmail = "${user.email}";
+        % endif
 
         // Colaraz Discussion Forum API variables
         % if user.is_authenticated and hasattr(course, 'id'):
