--- a/colaraz/cms/templates/widgets/header.html
+++ b/colaraz/cms/templates/widgets/header.html
@@ -61,41 +61,6 @@
           <span class="course-title" title="${context_library.display_name_with_default}">${context_library.display_name_with_default}</span>
         </a>
       </h2>
-
-      <nav class="nav-course nav-dd cz-nav-course ui-left" aria-label="${_('Course')}">
-        <h2 class="sr">${_("Course Navigation")}</h2>
-        <ol>
-
-          <li class="nav-item nav-library-settings">
-            <h3 class="title"><span class="label"><span class="label-prefix sr">${_("Library")} </span>${_("Settings")}</span> <span class="icon fa fa-caret-down ui-toggle-dd" aria-hidden="true"></span></h3>
-            <div class="wrapper wrapper-nav-sub">
-              <div class="nav-sub">
-                <ul>
-                  <li class="nav-item nav-library-settings-team">
-                    <a href="${lib_users_url}">${_("User Access")}</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </li>
-          <li class="nav-item nav-course-tools">
-            <h3 class="title"><span class="label">${_("Tools")}</span> <span class="icon fa fa-caret-down ui-toggle-dd" aria-hidden="true"></span></h3>
-
-            <div class="wrapper wrapper-nav-sub">
-              <div class="nav-sub">
-                <ul>
-                  <li class="nav-item nav-course-tools-import">
-                    <a href="${import_url}">${_("Import")}</a>
-                  </li>
-                  <li class="nav-item nav-course-tools-export">
-                    <a href="${export_url}">${_("Export")}</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </li>
-        </ol>
-      </nav>
       % endif
     </div>
 
@@ -340,7 +305,44 @@
                       </li>
                     </ol>
                   </nav>
-                  % endif
+                % elif context_library:
+
+                <nav class="nav-course nav-dd cz-nav-course ui-left" aria-label="${_('Course')}">
+                  <h2 class="sr">${_("Course Navigation")}</h2>
+                  <ol>
+
+                    <li class="nav-item nav-library-settings">
+                      <h3 class="title"><span class="label"><span class="label-prefix sr">${_("Library")} </span>${_("Settings")}</span> <span class="icon fa fa-caret-down ui-toggle-dd" aria-hidden="true"></span></h3>
+                      <div class="wrapper wrapper-nav-sub">
+                        <div class="nav-sub">
+                          <ul>
+                            <li class="nav-item nav-library-settings-team">
+                              <a href="${lib_users_url}">${_("User Access")}</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="nav-item nav-course-tools">
+                      <h3 class="title"><span class="label">${_("Tools")}</span> <span class="icon fa fa-caret-down ui-toggle-dd" aria-hidden="true"></span></h3>
+
+                      <div class="wrapper wrapper-nav-sub">
+                        <div class="nav-sub">
+                          <ul>
+                            <li class="nav-item nav-course-tools-import">
+                              <a href="${import_url}">${_("Import")}</a>
+                            </li>
+                            <li class="nav-item nav-course-tools-export">
+                              <a href="${export_url}">${_("Export")}</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </li>
+                  </ol>
+                </nav>
+
+                % endif
 
                 <ul>
                     <li><a href="${colaraz_recommendations_url}">Recommendations</a></li>
