--- a/colaraz/cms/templates/manage_users_lib.html
+++ b/colaraz/cms/templates/manage_users_lib.html
@@ -23,9 +23,8 @@ from openedx.core.djangolib.js_utils import (
 <div class="wrapper-mast wrapper">
   <header class="mast has-actions has-subtitle">
     <h1 class="page-header">
-      <small class="subtitle">${_("Settings")} - ${_("User Access")}</small>
-      <span class="sr">&gt; </span>
-      <span class="text">${context_course.display_name_with_default}</span>
+      <small class="subtitle">${_("Settings")}</small>
+      <span class="sr">&gt; </span>${_("User Access")}
     </h1>
 
     <nav class="nav-actions" aria-label="${_('Page Actions')}">
