Change text on logout page

--- a/colaraz/lms/templates/logout.html
+++ b/colaraz/lms/templates/logout.html
@@ -13,11 +13,10 @@
 
 {% block body %}
     <h1>{% trans "You have signed out." %}</h1>
-    <h1>amjad amjad amjad</h1>
 
     <p style="text-align: center; margin-bottom: 20px;">
         {% blocktrans trimmed %}
-          If you are not redirected within 5 seconds, <a href="{{ target }}">click here to go to the home page</a>.
+          If you are not redirected within 5 seconds, <a href="{{ target }}">click here to go to the login page</a>.
         {% endblocktrans %}
     </p>
 
