--- a/colaraz/lms/templates/main.html
+++ b/colaraz/lms/templates/main.html
@@ -475,7 +475,7 @@
         var colarazCheckSessionUrl = "${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('CHECK_SESSION_URL')}";
         var colarazCheckSessionRefreshTime = ${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('REFRESH_TIME_MILLISECONDS', 60000)};
         var colarazCheckSessionKey = "${getattr(settings, 'COLARAZ_CHECK_SESSION', {}).get('COLARAZ_CHECK_SESSION_KEY')}";
-        var edXLogoutUrl = "${reverse('colaraz_features:auth_logout_redirect')}";
+        var edXLogoutUrl = "${reverse('colaraz_features:session_logout')}";
         % if user.is_authenticated:
           % if user.id != request.session['_auth_user_id']:
               var currentUserEmail = "${User.objects.get(id=request.session['_auth_user_id']).email}";
