--- a/colaraz/lms/static/sass/course/layout/_courseware_preview.scss
+++ b/colaraz/lms/static/sass/course/layout/_courseware_preview.scss
@@ -6,6 +6,11 @@
 
 .content-wrapper {
 
+    &:before {
+        content: '';
+        display: table;
+    }
+
     .course-tabs {
         margin-top: 0;
         background: $gray-mid-border;
@@ -22,6 +27,83 @@
     .staff-modal,
     .history-modal {
         margin-left: -40% !important;
+    }
+}
+
+body {
+
+    .proctored_exam_status {
+        margin: $baseline*.5;
+        width: auto;
+
+        @include media-up(md) {
+            top: 100px;
+            position: sticky;
+            z-index: 12;
+        }
+
+        .exam-timer {
+            color: $black;
+            padding: $baseline*.75 $baseline*.5;
+
+            &:after {
+                content: '';
+                display: block;
+                clear: both;
+            }
+
+            .exam-timer-clock {
+                background: #fff;
+                border-radius: 20px;
+
+                span {
+                    display: inline-block;
+                    min-width: 50px;
+                }
+            }
+
+            .exam-timer-clock {
+
+                #toggle_timer {
+                    background: $primary;
+                    border-radius: 0 20px 20px 0;
+                    color: $text-color;
+
+                    &:hover {
+                        background: $primary-dark;
+                    }
+                }
+            }
+
+            .exam-button-turn-in-exam {
+                background: $primary;
+                border-radius: 20px;
+                color: $text-color;
+
+                &:hover {
+                    background: $primary-dark;
+                }
+            }
+
+            .exam-text {
+
+                @include media-down(md) {
+                    display: block;
+                    padding-bottom: $baseline;
+                    width: auto;
+                }
+            }
+        }
+
+        &.is-fixed {
+            position: static;
+            width: auto;
+
+            @include media-up(md) {
+                position: sticky;
+                top: 100px;
+            }
+        }
     }
 }
 
@@ -44,20 +126,6 @@
                 line-height: 1.4 !important;
                 padding: 5px;
             }
-        }
-    }
-
-    .proctored_exam_status {
-        margin: $baseline*.5;
-        width: auto;
-
-        .exam-timer {
-            color: $black;
-        }
-
-        &.is-fixed {
-            position: static;
-            width: auto;
         }
     }
 
